--- a/action.yml
+++ b/action.yml
@@ -11,10 +11,9 @@ branding:
 
 inputs:
   email:
-    description: The committer's email address
+    description: The commiter's email address
     required: true
     default: ${{ github.actor }}@localhost
-
   name:  
     description: The committer's name
     required: true
